<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.auth.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/login_now"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp" />

    <!--Email Field-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:hintTextColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_12ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/enter_your_email"
        android:textAlignment="viewStart"
        android:textColor="#FF0000"
        android:textSize="@dimen/_10ssp"
        android:visibility="gone"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/_10sdp"/>


    <!--Password Field-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:hintTextColor="@color/black"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_12ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/enter_your_password"
        android:textAlignment="viewStart"
        android:textColor="#FF0000"
        android:textSize="@dimen/_10ssp"
        android:visibility="gone"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/_10sdp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:visibility="gone"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_login_with_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_azure_radiance_r9"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:text="@string/log_in_with_facebook"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_facebook"
        android:layout_marginTop="@dimen/_10sdp"/>

    <TextView
        android:id="@+id/tv_login_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/bg_white_r9_st_wild_sand"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingVertical="@dimen/_7sdp"
        android:text="@string/log_in_with_google"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_google" />


    <TextView
        android:id="@+id/tv_register_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

</LinearLayout>